Multi-Object: Select link assert when going back and forth different selection modes #57295

Closed
opened 2018-10-18 16:02:09 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: cfdd902d2d (blender2.8 HEAD)
Worked: ?

Short description of error
Multi-object edit mode, selected linked crash when going back and forth between selection modes.

Exact steps for others to reproduce the error
cubes.blend

  • Change select mode to faces (3).
  • Deselect all (Alt+A).
  • Mouse hover the active cube (the right most one) and select linked (L).

The file is basically three cubes, all in edit mode together, and in edge select mode.

**Blender Version** Broken: cfdd902d2d5d (blender2.8 HEAD) Worked: ? **Short description of error** Multi-object edit mode, selected linked crash when going back and forth between selection modes. **Exact steps for others to reproduce the error** [cubes.blend](https://archive.blender.org/developer/F5125617/cubes.blend) * Change select mode to faces (3). * Deselect all (Alt+A). * Mouse hover the active cube (the right most one) and select linked (L). The file is basically three cubes, all in edit mode together, and in edge select mode.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2018-10-18 16:04:01 +02:00
Author
Owner

I believe it may have to do with the modes getting out of sync.
Inside edbm_select_linked_pick_invoke the call to unified_findnearest returns a valid eve, but a null efa.

I believe it may have to do with the modes getting out of sync. Inside `edbm_select_linked_pick_invoke` the call to `unified_findnearest` returns a valid **eve**, but a null **efa**.
Author
Owner

And indeed, the active object has select mode SCE_SELECT_FACE (4), while the other cubes have select mode SCE_SELECT_FACE | SCE_SELECT_EDGE (6).

A cheap partial fix would be P801. It works here and all. However it doesn't really address the underneath problem.

And indeed, the active object has select mode **SCE_SELECT_FACE** (4), while the other cubes have select mode **SCE_SELECT_FACE | SCE_SELECT_EDGE** (6). A cheap partial fix would be [P801](https://archive.blender.org/developer/P801.txt). It works here and all. However it doesn't really address the underneath problem.

This issue was referenced by 30b1e37e94

This issue was referenced by 30b1e37e943c319fa80e95cfbb105d62c7d79f37

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57295
No description provided.