Fix T57295: Edit-mesh modes got out of sync